-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.0
-
None
-
35707f8674 (qt-creator/qt-creator/8.0) 35707f8674 (qt-creator/qt-creator/master) 35707f8674 (qt-creator/tqtc-qt-creator/8.0)
AndroidDeployQtStep::stdError() is called by ChannelBuffer::append() from a totally different thread than the gui thread. That gives us:
SOFT ASSERT: "QThread::currentThread() == qApp->thread()" in file C:\Users\alportal\dev\qt-creator-qt63\src\plugins\projectexplorer\taskhub.cpp, line 160