android: fix call TaskHub::addTask from wrong thread

Fixes: QTCREATORBUG-27105
Change-Id: I3be5e09e66642f8405979f601eee0db7b6a530e8
Reviewed-by: hjk <hjk@qt.io>